# ralphorio

./: .env.example  .gitignore  .tmp-index.html  README.md  index.html  package-lock.json  package.json  tailwind.config.js
docs/: networking-architecture.md  release-smoke-checklist.md
eleven-labs/: API_KEY.txt  README.md
game-client/: Cargo.toml
game-client/src/: lib.rs
public/sprites/: character-engineer-default.png.json  character-machinist-rose.png.json  character-sprites.json  character-surveyor-cyan.png.json  world-enemy-biter-medium.png.json  world-enemy-biter-small.png.json  world-enemy-spitter-small.png.json  world-resource-coal.png.json  world-resource-copper-ore.png.json  world-resource-iron-ore.png.json  world-sprites.json  world-structure-assembler.png.json  world-structure-beacon.png.json  world-structure-miner.png.json
ralph/: prd.json  progress.txt  prompt.md
retro-diffusion/: API_KEY.txt  README.md  generate-character-set.mjs  generate-character.mjs  generate-world-set.mjs
scripts/: afk-ralph.sh  premerge-checks.sh  production-smoke.mjs  ralph-once.sh  replication-smoke.test.ts
sim-core/: Cargo.toml
sim-core/src/: domain.rs  lib.rs
src/: index.css  main.tsx  router.tsx
src/game/: bridge.ts  character-profiles.ts  character-sprites.ts  network-client.ts  types.ts
src/game/netcode/: replication.ts
src/lib/: player-id.ts
src/routes/: connect-route.tsx  room-route.tsx  root-layout.tsx
worker/: Cargo.toml  wrangler.toml
worker/src/: index.ts  lib.rs
worker/src/features/: build-feature.ts  movement-feature.ts  (+2 more)
(+5 files in other folders)
