[package]
name = "game-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.14.2", default-features = false, features = [
  "bevy_audio",
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_sprite",
  "bevy_winit",
  "mp3",
  "png",
  "webgl2",
] }
console_error_panic_hook = "0.1.7"
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
wasm-bindgen = "0.2.105"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
uuid = { version = "1.20.0", features = ["js"] }
sim-core = { path = "../sim-core" }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
